# calculator

./: CMakeLists.txt  README.md  calculator.c  fuzz.c
src/RPN/: RPN.c  RPN.h
src/arithm_func/: CMakeLists.txt  arithm_func.c  arithm_func.h
src/errors/: errors.c  errors.h
src/rec_desc/: CMakeLists.txt  rec_desc.c  rec_desc.h
src/stack/: stack.c  stack.h
